# GBA_INFCQ

./: .travis.yml  CMakeLists.txt  ER-Diagram Fantasy Hero.graphml  LICENSE  README.md  Timespent.csv
Fantasy Hero/: CMakeLists.txt
Fantasy Hero/Includes/: allocator.h  gba_engine.h  scene.h  sound_control.h
Fantasy Hero/Includes/background/: background.h  text.h  text_stream.h
Fantasy Hero/Includes/effects/: fade_out_scene.h  scene_effect.h
Fantasy Hero/Includes/gba/: tonc_asminc.h  tonc_bios.h  tonc_core_stub.h  tonc_math.h  tonc_oam.h
Fantasy Hero/Includes/palette/: combined_palette.h  palette_manager.h
Fantasy Hero/Includes/sprites/: affine_sprite.h  sprite.h  sprite_builder.h  sprite_manager.h
Fantasy Hero/Sprites/: Hero.c  Hero.h  Platform_Double.c  Platform_Single.c  Platform_Single.h  Power.h  Start_Scene_Background.c  Start_Scene_Background.h  shared.c  shared.h
Fantasy Hero/Sprites/Backgrounds/: Start_Scene_Background.c  Start_Scene_Background1.c  Start_Scene_Background1.h  Start_Scene_Background1.s
Fantasy Hero/Sprites/Battle Scene Objects/: Battle_Scene_Background.c  Battle_Scene_Background.h  Enemy.c  Enemy.h  Enemy_Walk_Left.c  Enemy_Walk_Right.c  Hero.c  Hero.h  Hero_Attack_Left.c  Hero_Attack_Right.c  Hero_Jump_Left.c  Hero_Jump_Right.c  Hero_Walk_Left.c  Hero_Walk_Right.c  Platform_Double.c  Platform_Double.h  Platform_Single.c  Power.c  Power.h  Power_Up_Star.c  shared.c  shared.h
Fantasy Hero/Sprites/Main Scene Objects/: Battle_Scene_Background.c  Battle_Scene_Background.h  Main Scene Background.h  Main Scene Background.map  Main Scene Background1.map  Main Scene Background2.c  Main Scene Background2.h  Wolkjes.h  (+14 more)
Fantasy Hero/Src/: Battle_Environment.h  Battle_Scene.cpp  Battle_Scene.h  Battle_Scene_Audio.h  Battle_Scene_Background.h  Battle_Scene_Objects.h  Battle_Scene_Shared.h  End_Scene.cpp  End_Scene.h  Environment.h  Extra_code  Knight_Dance_Object.h  Main_Environment.h  Main_Scene.cpp  Main_Scene.h  Main_Scene_Background.h  Main_Scene_Background1.h  Makefile  Object_Sprites.h  Object_Sprites_Shared.h  Objects.h  Platform.h  Press_Start_Object1.h  Press_Start_Object2.h  Sound_Effect.h  Stage_Start_Audio.h  Start_Scene.cpp  Start_Scene.h  Start_Scene_Background.h  Start_Scene_Objects.h  Start_Scene_Shared.h  main.cpp
(+18 files in other folders)
